Added user profile update ,dealers , vehicles

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
       <h1 class="display-4 text-center">Welcome to B2A2 Car Auction</h1>
       <p class="lead">Find your next car at amazing prices. Your dream car is just a bid away!</p>
       <a href="#inventory" class="btn cta-btn btn-lg">View Inventory</a>
+      <a href="/admin/login/" class="btn btn-dark btn-lg ml-2">Admin Login</a>
     </div>
   </div>
 
