--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .hero-image {
-      background-image: url('static/images/car.png'); /* Replace with actual image path */
+      background-image: url('{% static "images/car.png" %}');
       background-size: cover;
       background-position: center;
       height: 70vh;
